--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -2,9 +2,11 @@ name: Go
 
 on:
   push:
-    branches: [ "main" ]
+    branches: 
+      - omarTest
   pull_request:
-    branches: [ "main" ]
+    branches: 
+     - omarTest
 
 jobs:
 
