--- a/.github/workflows/hello.yaml
+++ b/.github/workflows/hello.yaml
@@ -4,9 +4,11 @@ on:
   push:
     branches: 
       - omerTest
+      - main
   pull_request:
     branches: 
      - omerTest
+     - main
 
 jobs:
 
